version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/MeshWorkflowStep.rst.txt
.. vale off



:class:`MeshWorkflowStep`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.MeshWorkflowStep(internalObject: Any)

   Bases: :py:obj:`object`


   
   Object that wraps IDSEngineeringModelGeometryOperationAuto.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshWorkflowStep

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddControl`
            - Adds a MeshWorkflowControl node as child node of the “Step” tree node. This control node can be created under any step node. This node is created to set properties that are required for executing an operation.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddOutcome`
            - Adds a MeshWorkflowOutcome node as child node of the “Step” tree node. This outcome node can be created under any step node. This node is created to see the results after executing an operation.
          * - :py:attr:`~CanCompleteInteractiveSession`
            - Query if this operation can complete an interactive mesh edit session.
          * - :py:attr:`~CanRevertStep`
            - CanRevertStep method.
          * - :py:attr:`~CanStartInteractiveSession`
            - Query if this operation can start an interactive mesh edit session.
          * - :py:attr:`~ClearDataAndDisableCheckpoint`
            - Clear checkpoint data and disable checkpointing for the step.
          * - :py:attr:`~CompleteInteractiveSession`
            - Query if this operation can complete an interactive mesh edit session.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~DuplicateOperation`
            - Duplicates the workflow
          * - :py:attr:`~DuplicateOperationAfter`
            - Duplicates the workflow
          * - :py:attr:`~DuplicateOperationBefore`
            - Duplicates the workflow
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetApplicableControlTypes`
            - GetApplicableControlTypes method.
          * - :py:attr:`~GetApplicableOutcomeTypes`
            - GetApplicableOutcomeTypes method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetDetailsView`
            - GetDetailsView method.
          * - :py:attr:`~GetDomainBrowserAvailableMorphFieldPatterns`
            - GetDomainBrowserAvailableMorphFieldPatterns method.
          * - :py:attr:`~GetDomainBrowserAvailableScopes`
            - GetDomainBrowserAvailableScopes method.
          * - :py:attr:`~GetDomainBrowserAvailableSizeFieldPatterns`
            - GetDomainBrowserAvailableSizeFieldPatterns method.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetPropertyWorksheetInfo`
            - GetPropertyWorksheetInfo method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetUnpublishedList`
            - GetUnpublishedList method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~InsertStepAfter`
            - Creates a new MeshWorkflowStep
          * - :py:attr:`~InsertStepBefore`
            - Creates a new MeshWorkflowStep
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~MeshWorkflowControls`
            - Gets the MeshWorkflowControls of an MeshWorkflowStep.
          * - :py:attr:`~MeshWorkflowOutcomes`
            - Gets the MeshWorkflowOutcomes of an MeshWorkflowStep.
          * - :py:attr:`~Preview`
            - Preview the MeshWorkflowStep. After the preview, the step will contain a preview outcome with the information required for the validation of the user inputs. The preview outcome can be returned using the MeshWorkflowOutcomes method of the step.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~PropertyTypeInfo`
            - PropertyTypeInfo method.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnType`
            - Renames applying the default name based on type.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AttachedRefs`
            - AttachedRefs property.
          * - :py:attr:`~CanEdit`
            - Gets whether the step can be edited or not.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~ClsId`
            - ClsId property.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~EnableCheckpoint`
            - Gets or sets whether the checkpointing is enabled for the step.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~OperationString`
            - Gets the OperationString.
          * - :py:attr:`~OperationType`
            - Returns the type of the operation. .
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Position`
            - The step's position in the workflow ordered steps.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReleaseStatusString`
            - ReleaseStatusString property.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~StepDescription`
            - StepDescription property.
          * - :py:attr:`~StepDescriptionJson`
            - StepDescriptionJson property.
          * - :py:attr:`~StepTypeInformation`
            - StepTypeInformation property.
          * - :py:attr:`~StepTypeInformationJson`
            - StepTypeInformationJson property.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: AttachedRefs
   :type: Optional[List[int]]


   
   AttachedRefs property.
















   ..
       !! processed by numpydoc !!

.. py:property:: CanEdit
   :type: Optional[bool]


   
   Gets whether the step can be edited or not.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: ClsId
   :type: Optional[int]


   
   ClsId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: EnableCheckpoint
   :type: Optional[bool]


   
   Gets or sets whether the checkpointing is enabled for the step.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelOperationAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: OperationString
   :type: Optional[str]


   
   Gets the OperationString.
















   ..
       !! processed by numpydoc !!

.. py:property:: OperationType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OperationType]


   
   Returns the type of the operation. .
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Position
   :type: Optional[int]


   
   The step's position in the workflow ordered steps.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReleaseStatusString
   :type: Optional[str]


   
   ReleaseStatusString property.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepDescription
   :type: Optional[System.Collections.Generic.Dictionary[str, Any]]


   
   StepDescription property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepDescriptionJson
   :type: Optional[str]


   
   StepDescriptionJson property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepTypeInformation
   :type: Optional[System.Collections.Generic.Dictionary[str, str]]


   
   StepTypeInformation property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepTypeInformationJson
   :type: Optional[str]


   
   StepTypeInformationJson property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddControl(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType) -> Ansys.ACT.Automation.Mechanical.MeshWorkflowControl

   
   Adds a MeshWorkflowControl node as child node of the “Step” tree node. This control node can be created under any step node. This node is created to set properties that are required for executing an operation.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddOutcome(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType) -> Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome

   
   Adds a MeshWorkflowOutcome node as child node of the “Step” tree node. This outcome node can be created under any step node. This node is created to see the results after executing an operation.

   ..
       !! processed by numpydoc !!

.. py:method:: CanCompleteInteractiveSession() -> bool

   
   Query if this operation can complete an interactive mesh edit session.

   ..
       !! processed by numpydoc !!

.. py:method:: CanRevertStep() -> bool

   
   CanRevertStep method.

   ..
       !! processed by numpydoc !!

.. py:method:: CanStartInteractiveSession() -> bool

   
   Query if this operation can start an interactive mesh edit session.

   ..
       !! processed by numpydoc !!

.. py:method:: ClearDataAndDisableCheckpoint() -> None

   
   Clear checkpoint data and disable checkpointing for the step.

   ..
       !! processed by numpydoc !!

.. py:method:: CompleteInteractiveSession(succeeded: bool) -> None

   
   Query if this operation can complete an interactive mesh edit session.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: DuplicateOperation() -> Ansys.ACT.Automation.Mechanical.MeshWorkflowStep

   
   Duplicates the workflow

   ..
       !! processed by numpydoc !!

.. py:method:: DuplicateOperationAfter() -> Ansys.ACT.Automation.Mechanical.MeshWorkflowStep

   
   Duplicates the workflow

   ..
       !! processed by numpydoc !!

.. py:method:: DuplicateOperationBefore() -> Ansys.ACT.Automation.Mechanical.MeshWorkflowStep

   
   Duplicates the workflow

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetApplicableControlTypes() -> List[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType]

   
   GetApplicableControlTypes method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetApplicableOutcomeTypes() -> List[Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType]

   
   GetApplicableOutcomeTypes method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDetailsView() -> Ansys.ACT.Automation.Mechanical.DetailsViewData

   
   GetDetailsView method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDomainBrowserAvailableMorphFieldPatterns(path: str) -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetDomainBrowserAvailableMorphFieldPatterns method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDomainBrowserAvailableScopes(path: str) -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetDomainBrowserAvailableScopes method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDomainBrowserAvailableSizeFieldPatterns(path: str) -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetDomainBrowserAvailableSizeFieldPatterns method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyWorksheetInfo() -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetPropertyWorksheetInfo method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUnpublishedList() -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetUnpublishedList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: InsertStepAfter(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OperationType, createMandatoryControls: bool) -> Ansys.ACT.Automation.Mechanical.MeshWorkflowStep

   
   Creates a new MeshWorkflowStep

   ..
       !! processed by numpydoc !!

.. py:method:: InsertStepBefore(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OperationType, createMandatoryControls: bool) -> Ansys.ACT.Automation.Mechanical.MeshWorkflowStep

   
   Creates a new MeshWorkflowStep

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: MeshWorkflowControls(bIgnoreSuppressed: bool, filterByType: str) -> List[Ansys.ACT.Automation.Mechanical.MeshWorkflowControl]

   
   Gets the MeshWorkflowControls of an MeshWorkflowStep.

   ..
       !! processed by numpydoc !!

.. py:method:: MeshWorkflowOutcomes(bIgnoreSuppressed: bool) -> List[Ansys.ACT.Automation.Mechanical.MeshWorkflowOutcome]

   
   Gets the MeshWorkflowOutcomes of an MeshWorkflowStep.

   ..
       !! processed by numpydoc !!

.. py:method:: Preview() -> None

   
   Preview the MeshWorkflowStep. After the preview, the step will contain a preview outcome with the information required for the validation of the user inputs. The preview outcome can be returned using the MeshWorkflowOutcomes method of the step.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyTypeInfo(property: Ansys.ACT.Automation.Mechanical.Property) -> System.Collections.Generic.Dictionary[str, Any]

   
   PropertyTypeInfo method.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnType() -> None

   
   Renames applying the default name based on type.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on